Separted addressbok by contact type and solve a mini bug in the profile template

--- a/personal/templates/profile.html
+++ b/personal/templates/profile.html
@@ -28,7 +28,7 @@
     </div>
     <div class="row">
       <div class="span6">
-	<h3>Datos B@aacute;sicos</h3>
+	<h3>Datos B&aacute;sicos</h3>
 	<ul >
 	  <li>C&eacute;dula: <strong>{{firefighter.id_document|default_if_none:"" }}</strong></li>
 	  <li>Fecha de Nacimiento: <strong>{{firefighter.birth_date|date:"d N"|default_if_none:"" }}</strong></li>
